fixing wrong colors on the contact-tag

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -833,6 +833,7 @@
     top: 0;
     left: 0;
     background-color: var(--color-white-2);
+    color: var(--color-white-2);
     width: 200px;
     height: 1px;
     margin-bottom: 10rem;
